[package]
name = "youtube-search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yew = "0.19.3"
web-sys = { version = "0.3.6", features = [
    "Event",
    "InputEvent",
    "HtmlInputElement",
] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.18"
gloo-net = "0.5.0"
